--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -10,6 +10,7 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.35.3",
     "@hookform/resolvers": "^5.2.1",
     "lucide-react": "^0.535.0",
     "next": "15.4.5",
@@ -21,13 +22,13 @@
     "zustand": "^5.0.7"
   },
   "devDependencies": {
+    "@repo/eslint-config": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
-    "typescript": "^5",
-    "@repo/eslint-config":"workspace:*",
-    "@repo/typescript-config":"workspace:*"
+    "typescript": "^5"
   }
 }
