--- a/apps/payment-service/package.json
+++ b/apps/payment-service/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "tsx --env-file=.env --watch src/index.ts ",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+        "check-types": "tsc --noEmit"
+
   },
   "dependencies": {
     "@hono/clerk-auth": "^3.0.3",
