--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,9 @@
     "build": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": [".next/**", "!.next/cache/**"]
+      "outputs": [".next/**", "!.next/cache/**"],
+          "env": ["DATABASE_URL"]
+
     },
     "lint": {
       "dependsOn": ["^lint"]
@@ -16,6 +18,16 @@
     "dev": {
       "cache": false,
       "persistent": true
-    }
+    },
+      "db:generate": {
+    "cache": false
+  },
+  "db:migrate": {
+    "cache": false,
+    "persistent": true
+  },
+  "db:deploy": {
+    "cache": false
+  }
   }
 }
