--- a/apps/order-service/package.json
+++ b/apps/order-service/package.json
@@ -14,12 +14,14 @@
   "packageManager": "pnpm@10.23.0",
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
+    "@repo/types": "workspace:*",
     "@types/node": "^20.19.25",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   },
   "dependencies": {
     "@clerk/fastify": "^2.6.4",
-    "fastify": "^5.6.2"
+    "fastify": "^5.6.2",
+    "@repo/order-db":"workspace:*"
   }
 }
