--- a/apps/payment-service/package.json
+++ b/apps/payment-service/package.json
@@ -5,15 +5,16 @@
     "dev": "tsx --env-file=.env --watch src/index.ts ",
     "build": "tsc",
     "start": "node dist/index.js",
-        "check-types": "tsc --noEmit"
-
+    "check-types": "tsc --noEmit"
   },
   "dependencies": {
     "@hono/clerk-auth": "^3.0.3",
     "@hono/node-server": "^1.19.6",
-    "hono": "^4.10.6"
+    "hono": "^4.10.6",
+    "stripe": "^20.0.0"
   },
   "devDependencies": {
+    "@repo/types": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^20.11.17",
     "tsx": "^4.7.1",
