--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -6,6 +6,11 @@
    "scripts": {
       "check-types": "tsx --noEmit"
    },
+   "dependencies": {
+      "@repo/product-db": "workspace:*",
+          "zod": "^4.0.14"
+
+   },
    "devDependencies": {
       "@repo/typescript-config": "workspace:*",
       "@types/node": "^24.10.1"
