feat(client): integrate Stripe payment processing and update checkout flow
- Add Stripe React and JS dependencies to client package
- Replace PaymentForm with StripePaymentForm component for Stripe integration
- Create CheckoutForm component for handling payment element rendering
- Add return page to handle Stripe session callbacks and payment status
- Create new StripePaymentForm component with shipping form integration
- Update cart page to use new Stripe payment form component
- Migrate local types to shared @repo/types package
- Add @repo/types as dev dependency in client package
- Update product page to use shared types and fix type casting for images
- Update cart store and product components to use shared types
- Add session and webhook routes to payment service
- Update payment service utilities for Stripe product handling
- Comment out test endpoints in test page for cleanup
- Update shared types package with cart and product type definitions
- Update pnpm lock file with new dependencies

--- a/apps/product-service/package.json
+++ b/apps/product-service/package.json
@@ -13,15 +13,16 @@
   "license": "ISC",
   "dependencies": {
     "@clerk/express": "^1.7.51",
+    "@repo/product-db": "workspace:*",
+    "@stripe/react-stripe-js": "^5.4.0",
+    "@stripe/stripe-js": "^8.5.2",
     "cors": "^2.8.5",
-    "express": "^5.0.3",
-    "@repo/product-db": "workspace:*"
+    "express": "^5.0.3"
   },
   "devDependencies": {
-    "@repo/typescript-config": "workspace:*",
     "@repo/types": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5"
-
   }
 }
