feat: introduce Kafka message queue, implement authentication middleware, and integrate Stripe for payment services

--- a/apps/product-service/package.json
+++ b/apps/product-service/package.json
@@ -17,7 +17,8 @@
     "@stripe/react-stripe-js": "^5.4.0",
     "@stripe/stripe-js": "^8.5.2",
     "cors": "^2.8.5",
-    "express": "^5.0.3"
+    "express": "^5.0.3",
+    "@repo/kafka": "workspace:*"
   },
   "devDependencies": {
     "@repo/types": "workspace:*",
