--- a/apps/order-service/package.json
+++ b/apps/order-service/package.json
@@ -18,10 +18,12 @@
     "@types/node": "^20.19.25",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
-  },
-  "dependencies": {
+
+   },
+   "dependencies": {
+      "@repo/order-db": "workspace:*",
+     "@repo/kafka":"workspace:*",
     "@clerk/fastify": "^2.6.4",
-    "fastify": "^5.6.2",
-    "@repo/order-db":"workspace:*"
+    "fastify": "^5.6.2"
   }
 }
